[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://Scenes/EnemyBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemies/enemy3 body 16x16.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/enemy3 head 16x16.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 3 )

[sub_resource type="CircleShape2D" id=7]
radius = 5.09902

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.0
height = 6.0

[sub_resource type="CircleShape2D" id=5]
radius = 125.0

[node name="Enemy2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Body" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 7 )

[node name="Head" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Idle"
playing = true

[node name="BulletDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetect"]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
visible = false
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 7, 0 )

[node name="EnemyBullet" parent="." instance=ExtResource( 2 )]
position = Vector2( -700, -878 )

[node name="ShootCD" type="Timer" parent="."]

[connection signal="body_entered" from="BulletDetect" to="." method="_on_BulletDetect_body_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
